--- a/index.html
+++ b/index.html
@@ -96,22 +96,24 @@ If you will do it, I will be dangerly bold.
 As you can see, I am the glittery gold.</p>
       </div>
 
-      <div class="poem">
-        <h2>Unspoken Rain</h2>
-        <p>The sky whispers
-In droplets so fine,
-Words it cannot speak,
-In rhythm and rhyme.</p>
-      </div>
-
-      <div class="poem">
-        <h2>The Mirror</h2>
-        <p>I looked into the mirror,
-But saw someone unknown,
-Was it me or a shadow,
-In a world overgrown?</p>
-      </div>
-    </section>
+ <div class="poem">
+      <div class="poem-title">Deja Vu</div>
+      <p>
+        At your own front view, when dreams come true,<br>
+        Everyone awaits for your review. Deja vu?<br>
+        Yet nothing, but a true version of you.<br>
+        Light up your mind, reflected in your eye view.<br>
+        You have to look upon your case.<br>
+        There are so many talks and thoughts you can't erase.<br>
+        But concentrate, don't lose pace.<br>
+        Trace your path in your own grace.<br>
+        Consistency lifts you high to reach and fly.<br>
+        Bide your fears a fond goodbye.<br>
+        Embrace the challenges, way towards the sky.
+      </p>
+    </div>
+  </section>
+     
 
     <section id="about">
       <h2>About Me</h2>
@@ -120,7 +122,7 @@ In a world overgrown?</p>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>You can reach me at: <a href="mailto:kriti@example.com">kriti@example.com</a></p>
+      <p>You can reach me at: <a href="mailto:kritikumari25dubey@gmail.com">kritikumari25dubey@gmail.com</a></p>
     </section>
   </main>
 
