--- a/index.html
+++ b/index.html
@@ -1,124 +1,147 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kriti's Poems</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Kriti's Poetry Blog</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Georgia', serif;
-      background-color: #fff8f0;
-      color: #333;
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
+    body {
+      font-family: 'Quicksand', sans-serif;
+      background: linear-gradient(to bottom right, #fff6e0, #ffe0e9);
+      color: #2f2f2f;
+      line-height: 1.6;
+    }
     header {
-      background-color: #ffccbc;
-      padding: 20px;
+      background: #ffd3b6;
+      padding: 2rem;
       text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
     header h1 {
-      margin: 0;
-      font-size: 2.5em;
+      font-family: 'Playfair Display', serif;
+      font-size: 3rem;
+      color: #8a4b3a;
     }
     nav {
-      background: #ffd8cb;
-      padding: 10px;
-      text-align: center;
+      background: #ffaaa5;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      padding: 1rem;
     }
     nav a {
-      margin: 0 15px;
+      color: white;
       text-decoration: none;
-      color: #333;
-      font-weight: bold;
+      font-weight: 600;
+      transition: color 0.3s;
     }
-    main {
-      padding: 20px;
-      max-width: 800px;
+    nav a:hover {
+      color: #2f2f2f;
+    }
+    section {
+      max-width: 850px;
       margin: auto;
+      padding: 2rem;
+    }
+    h2 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      color: #5a2e2e;
     }
     .poem {
-      margin-bottom: 40px;
+      background: rgba(255, 255, 255, 0.85);
+      border-radius: 12px;
+      padding: 1.5rem 2rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      animation: fadeIn 1s ease forwards;
     }
-    .poem h2 {
-      font-size: 1.8em;
-      margin-bottom: 10px;
+    .poem-title {
+      font-size: 1.6rem;
+      font-weight: bold;
+      margin-bottom: 0.8rem;
+      color: #d46a6a;
+      font-family: 'Playfair Display', serif;
     }
     .poem p {
       white-space: pre-line;
-      line-height: 1.6;
+      font-size: 1rem;
     }
     footer {
-      background: #ffccbc;
-      padding: 10px;
+      background: #8a4b3a;
+      color: white;
       text-align: center;
-      margin-top: 40px;
+      padding: 1rem;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
+
   <header>
     <h1>Kriti's Poetry Blog</h1>
   </header>
 
   <nav>
-    <a href="#home">Home</a>
+    <a href="#about">About</a>
     <a href="#poems">Poems</a>
-    <a href="#about">About Me</a>
     <a href="#contact">Contact</a>
   </nav>
 
-  <main id="home">
-    <section>
-      <h2>Welcome</h2>
-      <p>Welcome to my personal blog where I share poems from my heart. Feel the words, live the emotions.</p>
-    </section>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      Hello! I'm Kriti, a passionate poet who finds joy in expressing emotions, stories, and dreams through verses.
+      This blog is a personal space where I share poems that reflect my inner world. Thank you for reading!
+    </p>
+  </section>
 
-    <section id="poems">
-      <div class="poem">
-        <h2>Glittery Gold</h2>
-        <p>Tell me right, glow up your light,
-make up your mind, go behind,
-and also don't lie, I'm in the way of life.
-Hate it, but what you will get,
-fate of mine, is there something to left?
-My attitude is my poison,
-my allude is my venom.
-I am girly, but I am also little tomboy.
-I am cute, but also I have many coy
-Don't think about me or sense,
-is that warning or little suspense?
-Don't try to hurt my feelings,
-it's sign of offense.
-I don't like my phones, my phone's on hold.
-If you will do it, I will be dangerly bold.
-As you can see, I am the glittery gold.</p>
-      </div>
+  <section id="poems">
+    <h2>Poems</h2>
 
- <div class="poem">
-      <div class="poem-title">Deja Vu</div>
+    <div class="poem">
+      <div class="poem-title">Glittery Gold</div>
       <p>
-        At your own front view, when dreams come true,<br>
-        Everyone awaits for your review. Deja vu?<br>
-        Yet nothing, but a true version of you.<br>
-        Light up your mind, reflected in your eye view.<br>
-        You have to look upon your case.<br>
-        There are so many talks and thoughts you can't erase.<br>
-        But concentrate, don't lose pace.<br>
-        Trace your path in your own grace.<br>
-        Consistency lifts you high to reach and fly.<br>
-        Bide your fears a fond goodbye.<br>
-        Embrace the challenges, way towards the sky.
+Tell me right, glow up your light, make up your mind, go behind, and also don't lie,<br>
+I'm in the way of life. Hate it, but what you will get, fate of mine, is there something to left?<br>
+My attitude is my poison, my allude is my venom.<br>
+I am girly, but I am also little tomboy. I am cute, but also I have many coy.<br>
+Don't think about me or sense, is that warning or little suspense?<br>
+Don't try to hurt my feelings, it's sign of offense.<br>
+I don't like my phones, my phone's on hold.<br>
+If you will do it, I will be dangerly bold.<br>
+As you can see, I am the glittery gold.
       </p>
     </div>
-  </section>
-     
 
-    <section id="about">
-      <h2>About Me</h2>
-      <p>Hi! I'm Kriti, a teenage poet who finds solace and strength in words. Writing poems is my way to understand the world and express myself freely.</p>
-    </section>
+    <div class="poem">
+      <div class="poem-title">Deja Vu</div>
+      <p>
+At your own front view, when dreams come true,<br>
+Everyone awaits for your review. Deja vu?<br>
+Yet nothing, but a true version of you.<br>
+Light up your mind, reflected in your eye view.<br>
+You have to look upon your case.<br>
+There are so many talks and thoughts you can't erase.<br>
+But concentrate, don't lose pace.<br>
+Trace your path in your own grace.<br>
+Consistency lifts you high to reach and fly.<br>
+Bide your fears a fond goodbye.<br>
+Embrace the challenges, way towards the sky.
+      </p>
+    </div>
+
+  </section>
 
     <section id="contact">
       <h2>Contact</h2>
