--- a/index.html
+++ b/index.html
@@ -107,12 +107,11 @@
   </section>
 
   <section id="poems">
-    
     <div class="poem">
   <div class="poem-title">Distraction</div>
-  <img src="distraction-poem.png" alt="Distraction poem by Kriti Kumari" style="max-width:100%; border-radius: 12px; margin-top: 15px; box-shadow: 0 6px 18px rgba(0,0,0,0.15);">
+  <img src="distraction%20kriti.png" alt="Distraction poem by Kriti Kumari" style="max-width:100%; border-radius: 12px; margin-top: 15px; box-shadow: 0 6px 18px rgba(0,0,0,0.15);">
 </div>
-
+   
     <h2>Poems</h2>
     <div class="poem">
       <div class="poem-title">Glittery Gold</div>
