--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
     </p>
   </section>
   
+  <img src="focus-on-good-things.png" 
+     alt="Focus on Good Things by Kriti Kumari" 
+     style="max-width:100%; border-radius: 12px; margin-top: 20px; box-shadow: 0 6px 18px rgba(0,0,0,0.15);">
+
   <section id="poems"> 
     <div class="poem">
   <div class="poem-title">Distraction</div>
