--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
   
   <img src="focus-on-good-things.png" 
      alt="Focus on Good Things by Kriti Kumari" 
-     style="max-width:100%; border-radius: 12px; margin-top: 20px; box-shadow: 0 6px 18px rgba(0,0,0,0.15);">
+     style="max-width:100%; border-radius: 12px; margin-top: 20px; box-shadow: 0 6px 18px rgba(0,0,0,0.15);"> 
+</section>
+
 
   <section id="poems"> 
     <div class="poem">
