--- a/index.html
+++ b/index.html
@@ -106,14 +106,16 @@
     </p>
   </section>
   
-  <img src="focus-on-good-things.png" 
-     alt="Focus on Good Things by Kriti Kumari" 
-     style="max-width:100%; border-radius: 12px; margin-top: 20px; box-shadow: 0 6px 18px rgba(0,0,0,0.15);"> 
-</section>
 
 
   <section id="poems"> 
     <div class="poem">
+      div class="poem-title">Focus on Good Things</div>
+  <img src="Focus%20on%20Good%20Things.png"
+       alt="Focus on Good Things - poem image by Kriti Kumari"
+       style="max-width:100%; border-radius:12px; margin:15px 0; box-shadow:0 6px 18px rgba(0,0,0,0.15);">
+</div>
+    
   <div class="poem-title">Distraction</div>
   <img src="distraction%20kriti.png" 
        alt="Distraction poem by Kriti Kumari" 
