--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div class="poem">
       div class="poem-title">Focus on Good Things</div>
   <img src="Focus%20on%20Good%20Things.png"
-       alt="Focus on Good Things - poem image by Kriti Kumari"
+       alt="Focus on Good Things - poem image by Kriti Kumari"/>
        style="max-width:100%; border-radius:12px; margin:15px 0; box-shadow:0 6px 18px rgba(0,0,0,0.15);">
 </div>
     
