--- a/index.html
+++ b/index.html
@@ -111,12 +111,14 @@
   <section id="poems"> 
     <div class="poem">
       div class="poem-title">Focus on Good Things</div>
-  <img src="Focus%20on%20Good%20Things.png"
-       alt="Focus on Good Things - poem image by Kriti Kumari"/>
-       style="max-width:100%; border-radius:12px; margin:15px 0; box-shadow:0 6px 18px rgba(0,0,0,0.15);">
-</div>
-    
-  <div class="poem-title">Distraction</div>
+    <img src="Focus%20on%20good%20things.png" 
+     alt="Focus on good things - poem image by Kriti Kumari" 
+     style="max-width:100%; border-radius:12px; margin:15px 0; box-shadow:0 6px 18px rgba(0,0,0,0.15);" />
+    </div>
+
+
+
+ <div class="poem-title">Distraction</div>
   <img src="distraction%20kriti.png" 
        alt="Distraction poem by Kriti Kumari" 
        style="max-width:100%; border-radius: 12px; margin-top: 15px; box-shadow: 0 6px 18px rgba(0,0,0,0.15);">
