--- a/index.html
+++ b/index.html
@@ -110,12 +110,11 @@
 
   <section id="poems"> 
     <div class="poem">
-      <div class="poem-title">Focus on Good Things</div>
-
+      
+      <div class="poem-title">Choice is yours</div>
 <img src="Focus%20on%20good%20things.png" 
      alt="Focus on Good Things - poem by Kriti Kumari" 
      style="max-width:100%; border-radius:12px; margin:15px 0; box-shadow:0 6px 18px rgba(0,0,0,0.15);" />
-
     </div>
 
 
