--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kriti's Poetry Blog ✨</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
   <style>
@@ -157,13 +157,13 @@
     <h2>Poems</h2>
 
     <div class="poem">
-      <div class="poem-title">Choice is Yours</div>
-      <img src="Focus%20on%20good%20things.png" alt="Focus on Good Things - poem by Kriti Kumari" />
+      <div class="poem-title">Focus on Good Things</div>
+      <img src="Focus on good things.png" alt="Focus on Good Things - poem by Kriti Kumari" />
     </div>
 
     <div class="poem">
       <div class="poem-title">Distraction</div>
-      <img src="distraction%20kriti.png" alt="Distraction poem by Kriti Kumari" />
+      <img src="distraction kriti.png" alt="Distraction poem by Kriti Kumari" />
     </div>
 
     <div class="poem">
@@ -211,6 +211,7 @@ Embrace the challenges, way towards the sky.
 
 </body>
 </html>
+
 
 
 
