--- a/index.html
+++ b/index.html
@@ -254,9 +254,33 @@ Only you can do is to pray.
 </div>
 
 </div>
-</section>
 
-  <section id="contact">
+  $1
+    <div class="poem">
+      <div class="poem-title">I am the Vampire</div>
+      <p>
+Forgetting your liars, dreaming of my hires<br>
+Screaming through nighters, between twilight you want to be miGHTER<br>
+Hold up, be aware of the fume, red velvet can give you hurtful gloom<br>
+I think you know what we consume, our crimson lace has its own perfume<br>
+Bloodstain can happen in gleam, it will haunt you extreme<br>
+Echoes of my voice with green face, no redeem<br>
+Can't you see, silver dagger regime<br>
+PlantoM, moves with pride, velvet wrapped in death delight<br>
+Scheming worthless, marble tomb eyeless<br>
+Ebony mirror says, master let silk BONE sink<br>
+And make more dream, let the people swing
+      </p>
+    </div>
+    <div class="poem">
+      <div class="poem-title">[Title of Your Horror Poem]</div>
+      <p>
+        [Your horror poem goes here. You can send it to me and I’ll insert it.]
+      </p>
+    </div>
+  </section>
+
+$1
     <h2>Contact</h2>
     <p>You can reach me at: <a href="mailto:kritikumari25dubey@gmail.com">kritikumari25dubey@gmail.com</a></p>
   </section>
@@ -267,3 +291,4 @@ Only you can do is to pray.
 
 </body>
 </html>
+
